@@ -43,6 +43,14 @@
   </provides>
 
   <releases>
+    <release version="0.3.1" date="2016-02-20">
+      <description>
+        <ul>
+          <li>Actually install icons.</li>
+          <li>Add AppStream metadata.</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.3.0" date="2016-02-15">
       <description>
         <ul>
